2015-05-03  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, doc/ja/README.ja: Updated.

	* MLActivity.java, jni/x_display.[ch], fb/x_window.c:
	  Copy&paste via clipboard is supported.

	* jni/x_event_source.c:
	  - update_ime_text_on_active_term() searches not only attached but also
	    focused window.
	  - ALooper_removeFds() is called everytime before closing fds in
	    x_event_source_process().

	* mkf_*_conv.c: mkf_parser_reset() -> mkf_parser_full_reset().

	* mkf_parser.c: mkf_parser_full_reset() which resets ml_parser_t::is_eos
	  is added.

	* mkf/lib/Makefile.in: 16.0 -> 16.1

	* win32/x_window.c:
	  - x_window_remove_child() is added.
	  - SetFocus() is called in receiving Button1 event.

	* x_im_{candidate|status}_screen.c: Compiling error is fixed.

	* x_shortcut.[ch], x_screen.c: CLOSE_SCREEN shortcut is supported.

	* x_layout.c: The size of a removed child window is reverted to the original
	  in x_layout_remove_child().

	* x_main_config.c: "exec_cmd" option is avalable in ~/.mlterm/main.

	* x_screen_manager.c: Fixes for win32.

2015-04-30  Araki Ken  <arakiken@users.sf.net>

	* x_sb_screen.[ch]: renamed to x_layout.[ch].

2015-04-29  Araki Ken  <arakiken@users.sf.net>

	* x_screen_manager.c: x_system_event_listener_t::split_screen is implemented.

	* x_screen.[ch], x_shortcut.[ch]:
	  - VSPLIT_SCREEN and HSPLIT_SCREEN shortcuts are supported.
	  - split_screen is added to x_system_event_listener_t.

	* x_sb_screen.[ch]: It is supported to manage multiple sets of screen
	  and scrollbar.

	* x_window.h, xlib/x_window.c:
	  - has_input_focus is added to x_window_t.
	  - x_window_t::is_focused is off except when x_window_t::has_input_focus is on.

	* fb/x_window.c:
	  - focus_window() which focuses a specified window is called when
	    mouse button is clicked on it and when x_window_map() is called.
	  - x_window_remove_child() is added.
	  - input_focus is added to arguments of x_window_init().
