@@ -1,3 +1,8 @@
+2015-05-05  Araki Ken  <arakiken@users.sf.net>
+
+	* ml_vt100_parser.[ch]:
+	  https://gist.github.com/saitoha/4b320b9cb6d637d14dbc is merged.
+
 2015-05-03  Araki Ken  <arakiken@users.sf.net>
 
 	* man/mlterm.1, doc/ja/README.ja: Updated.
